[package]
name = "gh-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7" }
configparser = { version = "3.0.2", features = ["async-std", "indexmap"] }
openssl = { version = "0.10", features = ["vendored"] }
git2 = "0.18.1"
home = "0.5.5"
octocrab = "0.32.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
regex = "1.10.2"
serde = "1.0.192"
serde_json = "1.0.108"
ssh-key = { version = "0.6.2", features = ["ed25519"] }
terminal_size = "0.3.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
url = "2.4.1"

[[bin]]
name = "gh"
path = "src/lib.rs"

[dev-dependencies]

